# collectd-plugins

./: .cirrus.yml  .gitignore  Cargo.toml  Makefile  README.md  debug.conf
.github/workflows/: rust-freebsd.yml
bsd-temp/: Cargo.toml
bsd-temp/src/: lib.rs
zpool-stats/: Cargo.toml  build.rs
zpool-stats/src/: lib.rs
